correcting borders and spacing of table cells

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,29 @@ h2 {
  text-align: center;
 }
 
+table {
+  align-self: center;
+  width: 400px;
+  border-spacing: 5px;
+}
+
+th {
+  text-align: left;
+}
+
+td {
+  text-align: left;
+}
+
+th, td {
+  padding: 5px;
+}
+
+table, th, td {
+  border: 1px solid #000;
+  border-collapse: collapse;
+}
+
 #right {
   /*display: flex;
   flex: 1;*/
